Fix overflow content on main page

--- a/client/src/styles/MapPage.css
+++ b/client/src/styles/MapPage.css
@@ -1,6 +1,6 @@
 .timeRange {
   position: absolute;
-  bottom: 10px;
+  bottom: 16px;
   right: 0;
   width: 75%;
   height: 10%;
